fix: adjust responsivness on mobile to use a horizontal scroll

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -19,3 +19,13 @@
     }
   }
 }
+
+.playlist-scroll-x {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  -webkit-overflow-scrolling: touch;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
